@@ -14,6 +14,7 @@ __revision__ = "$Revision$"
 
 #-----------------------------------------------------------------------------#
 # Imports
+import types
 import wx
 import unittest
 
@@ -33,6 +34,7 @@ class StyleMgrTest(unittest.TestCase):
         self.dd = dict(ed_style.DEF_STYLE_DICT)
         self.bstr = ["fore:#000000", "back:#FFFFFF",
                      "face:%(primary)s", "size:%(size)d"]
+        self.stylesheet = common.GetDataFilePath('Dessert.ess')
 
     def tearDown(self):
         pass
@@ -62,7 +64,7 @@ class StyleMgrTest(unittest.TestCase):
         ditem = self.mgr.GetItemByName("default_style")
         self.assertTrue(ditem.IsOk(), "The default_style item is not OK")
 
-        # Check getting a non existant style tag
+        # Check getting a non existent style tag
         fake = self.mgr.GetItemByName("fakestyletag")
         self.assertFalse(fake.IsOk(), "The fake tag is not empty: %s" % str(fake))
 
@@ -184,3 +186,27 @@ class StyleMgrTest(unittest.TestCase):
                           "%s != %s" % (citem, item))
         self.assertFalse(self.mgr.SetStyleTag('default_style', self.bstr),
                          "SetStyleTag allowed setting of a list!")
+
+    def testParseStyleData(self):
+        """Test parsing Editra Style Sheets"""
+        data = common.GetFileContents(self.stylesheet)
+        styledict = self.mgr.ParseStyleData(data)
+        for tag, item in styledict.iteritems():
+            self.assertTrue(isinstance(tag, types.UnicodeType), "%s Is not Unicode!" % tag)
+            self.assertTrue(isinstance(item, ed_style.StyleItem))
+
+    def testPackStyleSet(self):
+        """Test packing an incomplete style set"""
+        ## TEST 1 - loading and packing sheet that does not define whitespace_style
+        data = common.GetFileContents(self.stylesheet)
+        styledict = self.mgr.ParseStyleData(data)
+        self.assertTrue('whitespace_style' not in styledict)
+        default = styledict.get('default_style')
+        self.assertTrue(isinstance(default, ed_style.StyleItem))
+        # Pack the Style Set
+        styledict = self.mgr.PackStyleSet(styledict)
+        self.assertTrue('whitespace_style' in styledict)
+        whitestyle = styledict.get('whitespace_style')
+        self.assertTrue(whitestyle == default)
+        ## END TEST 1
+
